--- a/app/src/main/res/layout/fragment1_layout.xml
+++ b/app/src/main/res/layout/fragment1_layout.xml
@@ -5,10 +5,9 @@
     android:layout_gravity="center"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Calls"
-        android:layout_gravity="center"
-        android:textSize="30sp"></TextView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </LinearLayout>
