--- a/app/src/main/res/layout/fragment2_layout.xml
+++ b/app/src/main/res/layout/fragment2_layout.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_gravity="center"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:background="#EDEBEB"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
-    <TextView
+    <GridView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Images"
-        android:layout_gravity="center"
-        android:textSize="30sp"></TextView>
+        android:layout_marginTop="10dp"
+        android:numColumns="3"
+        android:horizontalSpacing="4dp"
+        android:verticalSpacing="4dp"
+        android:id="@+id/gridView"
+        />
+
 </LinearLayout>
