show single large image via click(fail..)

--- a/app/src/main/res/layout/fragment2_layout.xml
+++ b/app/src/main/res/layout/fragment2_layout.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical"
     android:background="#EDEBEB"
     android:layout_height="match_parent"
+    android:descendantFocusability="blocksDescendants"
     tools:context=".MainActivity">
 
     <GridView
