--- a/app/src/main/res/layout/fragment2_layout.xml
+++ b/app/src/main/res/layout/fragment2_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:background="#EDEBEB"
+    android:background="#000"
     android:layout_height="match_parent"
     android:descendantFocusability="blocksDescendants"
     tools:context=".MainActivity">
