--- a/app/src/main/res/layout/fragment1_layout.xml
+++ b/app/src/main/res/layout/fragment1_layout.xml
@@ -10,14 +10,14 @@
         android:layout_height="wrap_content">
         <EditText
             android:id="@+id/search_et"
-            android:layout_width="315dp"
+            android:layout_width="325dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"/>
 
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="720dp">
+        android:layout_height="450dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
@@ -26,7 +26,7 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="5dp">
+        android:layout_height="10dp">
 
     </LinearLayout>
     <Button
@@ -34,6 +34,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/add_image"/>
+        android:background="@drawable/add_image"
+        android:text="추가"
+        android:textSize="22sp"/>
 
 </LinearLayout>
