--- a/app/src/main/res/layout/fragment3_layout.xml
+++ b/app/src/main/res/layout/fragment3_layout.xml
@@ -16,6 +16,12 @@
         android:layout_height="wrap_content"
         android:text="RECORD" />
 
+    <Button
+        android:id="@+id/play_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="PLAY" />
+
 <!--    <Button-->
 <!--        android:id="@+id/play_btn"-->
 <!--        android:layout_width="match_parent"-->
