--- a/app/src/main/res/layout/fragment3_layout.xml
+++ b/app/src/main/res/layout/fragment3_layout.xml
@@ -3,11 +3,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_gravity="center"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/black">
 
     <androidx.constraintlayout.utils.widget.ImageFilterButton
         android:id="@+id/colorImage"
         android:layout_width="match_parent"
+        android:background="@color/black"
         android:layout_height="500dp" />
 
     <Button
