--- a/app/src/main/res/layout/fragment3_layout.xml
+++ b/app/src/main/res/layout/fragment3_layout.xml
@@ -6,11 +6,50 @@
     android:layout_height="match_parent"
     android:background="@color/black">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+        <Button
+            android:id="@+id/btn_title"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="Sample Title"
+            android:textColor="#fff"/>
+
+        <ImageButton
+            android:id="@+id/btn_play"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#fff"
+            android:src="@drawable/play"/>
+
+        <ImageButton
+            android:id="@+id/btn_pause"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#fff"
+            android:src="@drawable/pause"/>
+
+        <Space
+            android:layout_width="40dp"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+
+<!--    <Button-->
+<!--        android:id="@+id/musiclist_btn"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="MUSIC LIST"-->
+<!--        />-->
+
     <androidx.constraintlayout.utils.widget.ImageFilterButton
         android:id="@+id/colorImage"
         android:layout_width="match_parent"
         android:background="@color/black"
-        android:layout_height="500dp" />
+        android:layout_height="400dp" />
 
     <Button
         android:id="@+id/record_btn"
