modify play button and recording button

--- a/app/src/main/res/layout/fragment3_layout.xml
+++ b/app/src/main/res/layout/fragment3_layout.xml
@@ -23,19 +23,19 @@
             android:id="@+id/btn_play"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background="#fff"
-            android:src="@drawable/play"/>
+            android:background="#000"
+            android:src="@drawable/ic_playing" />
 
         <ImageButton
-            android:id="@+id/btn_pause"
+            android:id="@+id/record_btn"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background="#fff"
-            android:src="@drawable/pause"/>
+            android:background="#000"
+            android:src="@drawable/ic_not_recording" />
 
         <Space
             android:layout_width="40dp"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
     </LinearLayout>
 
 <!--    <Button-->
@@ -50,11 +50,5 @@
         android:layout_width="match_parent"
         android:background="@color/black"
         android:layout_height="400dp" />
-
-    <Button
-        android:id="@+id/record_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="RECORD" />
 
 </LinearLayout>
