--- a/app/src/main/res/layout/fragment3_videos_layout.xml
+++ b/app/src/main/res/layout/fragment3_videos_layout.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="Sample Title"
+            android:text="CHOOSE VIDEO"
             android:textColor="#fff"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
