--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#BC0000</color>
+    <color name="orange">#FF551F</color>
+    <color name="yellow">#FFC107</color>
+    <color name="green">#2F7A32</color>
+    <color name="blue">#122FCC</color>
+    <color name="navy">#091C87</color>
 </resources>
