--- a/app/src/main/res/layout/fragment2_layout.xml
+++ b/app/src/main/res/layout/fragment2_layout.xml
@@ -21,18 +21,6 @@
         ></GridView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/gallery_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:clickable="true"
-        android:focusable="true"
-        app:layout_constraintBottom_toTopOf="@+id/camera_btn"
-        app:layout_constraintEnd_toEndOf="@+id/camera_btn"
-        android:visibility="invisible"
-        app:srcCompat="@drawable/ic_gallery" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/camera_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,6 +28,8 @@
         android:clickable="true"
         android:focusable="true"
         android:visibility="invisible"
+        android:backgroundTint="#8C8686"
+        app:backgroundTint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/add_btn"
         app:layout_constraintEnd_toEndOf="@+id/add_btn"
         app:srcCompat="@drawable/ic_camera" />
@@ -53,7 +43,8 @@
         android:layout_marginBottom="24dp"
         android:clickable="true"
         android:focusable="true"
-        android:backgroundTint="#673AB7"
+        android:backgroundTint="#D1D0D0"
+        app:backgroundTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_add" />
