--- a/app/src/main/res/layout/fragment3_layout.xml
+++ b/app/src/main/res/layout/fragment3_layout.xml
@@ -17,6 +17,7 @@
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:text="Sample Title"
+            android:fontFamily="@font/esamanru_medium"
             android:textColor="#fff"/>
 
         <ImageButton
