--- a/app/src/main/res/layout/fragment1_layout.xml
+++ b/app/src/main/res/layout/fragment1_layout.xml
@@ -16,6 +16,7 @@
             android:id="@+id/search_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/red"
             android:layout_marginLeft="5dp" />
 
     </LinearLayout>
@@ -28,8 +29,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="783dp"
-            />
+            android:layout_height="783dp" />
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -40,6 +40,9 @@
         android:clickable="true"
         android:focusable="true"
         android:visibility="invisible"
+        android:backgroundTint="#8C8686"
+        app:backgroundTint="@color/black"
+        app:borderWidth="1.0dp"
         app:layout_constraintBottom_toTopOf="@+id/add_btn_1"
         app:layout_constraintEnd_toEndOf="@+id/add_btn_1"
         app:srcCompat="@drawable/ic_add_number" />
@@ -49,13 +52,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
         android:layout_marginBottom="24dp"
+        android:backgroundTint="#D1D0D0"
         android:clickable="true"
         android:focusable="true"
-        android:backgroundTint="#673AB7"
+        app:backgroundTint="@color/black"
+        app:borderWidth="1.0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_add" />
+        app:srcCompat="@drawable/ic_add"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
