--- a/app/src/main/res/layout/item_music_info.xml
+++ b/app/src/main/res/layout/item_music_info.xml
@@ -4,22 +4,38 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/music_name"
-        android:textSize="20sp"
-        android:textColor="#fff"/>
-    <TextView
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/music_name"
+            android:gravity="left"
+            android:textSize="20sp"
+            android:textColor="#fff"/>
+        <TextView
+            android:layout_width="100dp"
+            android:gravity="right"
+            android:layout_height="wrap_content"
+            android:id="@+id/artist_name"
+            android:textSize="15sp"
+            android:textColor="#FFFFFF"/>
+    </LinearLayout>
+    <Space
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/artist_name"
-        android:textSize="12sp"
-        android:textColor="#FFFFFF"/>
+        android:layout_height="1.5dp"/>
+
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@drawable/gradient"/>
+        android:background="@color/red"/>
 
 
 </LinearLayout>
